Added ability to receive long messages.
Send support is in here too. We'll enable it in a future release after
enough people have updated.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -218,6 +218,8 @@
                 android:value="org.thoughtcrime.securesms.ConversationListActivity" />
     </activity>
 
+    <activity android:name=".longmessage.LongMessageActivity" />
+
     <activity android:name=".conversation.ConversationPopupActivity"
               android:windowSoftInputMode="stateVisible"
               android:launchMode="singleTask"
