Gradle/Gradlew/AndroidGradlePlugin update.

--- a/build.gradle
+++ b/build.gradle
@@ -4,17 +4,13 @@ import java.security.MessageDigest
 
 buildscript {
     repositories {
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+        google()
         maven {
             url "https://repo1.maven.org/maven2"
-            jcenter()
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath files('libs/gradle-witness.jar')
     }
 }
@@ -52,9 +48,6 @@ repositories {
         content {
             includeGroupByRegex "com\\.amulyakhare.*"
         }
-    }
-    maven {
-        url "https://maven.google.com"
     }
     google()
     jcenter()
