Add back the highlight and sticker tools.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -400,7 +400,7 @@
               android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
 
     <activity android:name=".scribbles.StickerSelectActivity"
-              android:theme="@style/TextSecure.ScribbleTheme"
+              android:theme="@style/TextSecure.DarkTheme"
               android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
 
     <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
